# orbits

./: .gitignore  .gitlab-ci.yml  .stylish-haskell.yaml  .travis.yml  LICENSE  appveyor.yml  changelog.md  default.nix  orbit.cabal  orbits.cabal  package.yaml  readme.md  release.nix  shell.nix  stack.yaml
.github/workflows/: ci.yml
src/Data/Constants/Mechanics/: Extra.hs
src/Data/Metrology/: Extra.hs
src/Data/UnitsOfMeasure/: Extra.hs
src/Linear/Quaternion/: Extra.hs
src/Physics/: Orbit.hs  Radian.hs
src/Physics/Orbit/: Anomaly.hs  Metrology.hs  Sol.hs  State.hs  StateVectors.hs
test/: DocTest.hs  Test.hs  WrappedAngle.hs
test/Data/CReal/: QuickCheck.hs
test/Data/Metrology/: Extra.hs  QuickCheck.hs
test/Data/UnitsOfMeasure/: QuickCheck.hs
test/Linear/: QuickCheck.hs
test/Physics/Orbit/: QuickCheck.hs
test/Test/: Anomaly.hs  Exact.hs  Radian.hs  SlowTest.hs  State.hs  StateVectors.hs
test/Test/QuickCheck/: Extra.hs
