name:                orbit
version:             0.2.0.0
synopsis:            Types and functions for Kepler orbits.
description:         Types and functions for Kepler orbits.
homepage:            https://github.com/expipiplus1/orbit
bug-reports:         http://github.com/expipiplus1/orbit/issues
license:             MIT
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          Joe Hermaszewski <spaced.out@monoid.al>
copyright:           2015 Joe Hermaszewski
category:            Physics
build-type:          Simple
extra-source-files:
  .gitignore
  readme.md
  stack.yaml
cabal-version:       >=1.10
tested-with: GHC >= 7.10 && < 8

source-repository head
  type: git
  location: https://github.com/expipiplus1/orbit

library
  exposed-modules:
    Physics.Orbit
    Physics.Radian
  other-modules:
    Data.UnitsOfMeasure.Extra
  build-depends:
    ad         >= 4.3.2 && < 4.4,
    base       >= 4.8   && < 4.9,
    exact-real >= 0.12  && < 0.13,
    linear     >= 1.20  && < 1.21,
    uom-plugin >= 0.2   && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  ghc-options:
    -Wall -threaded
  hs-source-dirs:
    test,
    src
  main-is:
    Test.hs
  other-modules:
    Physics.Orbit.QuickCheck
    Physics.Radian
    Data.CReal.QuickCheck
    Data.UnitsOfMeasure.Extra
    Data.UnitsOfMeasure.QuickCheck
    Test.QuickCheck.Extra
    WrappedAngle
  build-depends:
    base             >= 4.8   && < 4.9,
    ad               >= 4.3.2 && < 4.4,
    checkers         >= 0.3   && < 0.5,
    exact-real       >= 0.12  && < 0.13,
    linear           >= 1.18  && < 1.21,
    QuickCheck       >= 2.8   && < 2.9,
    random           >= 1.1   && < 1.2,
    tagged           >= 0.8   && < 0.9,
    tasty            >= 0.10  && < 0.12,
    tasty-quickcheck >= 0.8.4 && < 0.9,
    tasty-th         >= 0.1   && < 0.2,
    uom-plugin       >= 0.2   && < 0.3,
    orbit

test-suite doctest
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  ghc-options:
    -Wall -threaded
  hs-source-dirs:
    test
  main-is:
    DocTest.hs
  build-depends:
    base,
    directory >= 1.0 && < 1.3,
    doctest   >= 0.8 && < 0.12,
    filepath  >= 1.3 && < 1.5
