name:                orbit
version:             0.2.0.0
synopsis:            Types and functions for Kepler orbits.
description:         Types and functions for Kepler orbits.
homepage:            https://github.com/expipiplus1/orbit
bug-reports:         http://github.com/expipiplus1/orbit/issues
license:             MIT
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          Joe Hermaszewski <spaced.out@monoid.al>
copyright:           2015 Joe Hermaszewski
category:            Physics
build-type:          Simple
extra-source-files:
  .gitignore
  readme.md
cabal-version:       >=1.10
tested-with: GHC >= 7.10 && < 8

source-repository head
  type: git
  location: https://github.com/expipiplus1/orbit

library
  exposed-modules:
    Physics.Orbit
    Physics.Orbit.Anomaly
    Physics.Orbit.State
    Physics.Radian
    Data.UnitsOfMeasure.Extra
  other-modules:
    Linear.Quaternion.Extra
  build-depends:
    ad         >= 4.3.2 && < 4.4,
    base       >= 4.8   && < 4.10,
    exact-real >= 0.12  && < 0.13,
    microlens  >= 0.4   && < 0.5,
    linear     >= 1.20  && < 1.21,
    uom-plugin >= 0.2   && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall -O2

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  ghc-options:
    -Wall -threaded -O2
  hs-source-dirs:
    test
  main-is:
    Test.hs
  other-modules:
    Physics.Orbit.QuickCheck
    Data.CReal.QuickCheck
    Data.UnitsOfMeasure.QuickCheck
    Test.QuickCheck.Extra
    WrappedAngle
    Test.Anomaly
    Test.Exact
    Test.Radian
    Test.SlowTest
    Test.State
  build-depends:
    base             >= 4.8   && < 4.10,
    ad               >= 4.3.2 && < 4.4,
    checkers         >= 0.3   && < 0.5,
    exact-real       >= 0.12  && < 0.13,
    linear           >= 1.18  && < 1.21,
    QuickCheck       >= 2.8   && < 2.9,
    random           >= 1.1   && < 1.2,
    tagged           >= 0.8   && < 0.9,
    tasty            >= 0.10  && < 0.12,
    tasty-quickcheck >= 0.8.4 && < 0.9,
    tasty-th         >= 0.1   && < 0.2,
    uom-plugin       >= 0.2   && < 0.3,
    orbit

test-suite doctest
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  ghc-options:
    -Wall -threaded
  hs-source-dirs:
    test
  main-is:
    DocTest.hs
  build-depends:
    base      >= 4.8 && < 4.10,
    directory >= 1.0 && < 1.3,
    doctest   >= 0.8 && < 0.12,
    filepath  >= 1.3 && < 1.5
