name:                orbit
version:             0.2.0.0
synopsis:            Types and functions for Kepler orbits.
description:         Types and functions for Kepler orbits.
homepage:            https://github.com/expipiplus1/orbit
bug-reports:         http://github.com/expipiplus1/orbit/issues
license:             MIT
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          Joe Hermaszewski <spaced.out@monoid.al>
copyright:           2015 Joe Hermaszewski
category:            Physics
build-type:          Simple
extra-source-files:
  .gitignore
  readme.md
cabal-version:       >=1.10
tested-with: GHC >= 7.10 && < 8

source-repository head
  type: git
  location: https://github.com/expipiplus1/orbit

library
  exposed-modules:
    Physics.Orbit
    Physics.Radian
  other-modules:
    Data.UnitsOfMeasure.Extra
  build-depends:
    ad         >= 4.3.2,
    base       >= 4.8,
    exact-real >= 0.12,
    linear     >= 1.20,
    uom-plugin >= 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall -O2

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  ghc-options:
    -Wall -threaded -O2
  hs-source-dirs:
    test,
    src
  main-is:
    Test.hs
  other-modules:
    Physics.Orbit.QuickCheck
    Physics.Radian
    Data.CReal.QuickCheck
    Data.UnitsOfMeasure.Extra
    Data.UnitsOfMeasure.QuickCheck
    Test.QuickCheck.Extra
    WrappedAngle
  build-depends:
    base             >= 4.8,
    ad               >= 4.3.2,
    checkers         >= 0.3,
    exact-real       >= 0.12,
    linear           >= 1.18,
    QuickCheck       >= 2.10,
    random           >= 1.1,
    tagged           >= 0.8,
    tasty            >= 0.10,
    tasty-quickcheck >= 0.8.4,
    tasty-th         >= 0.1,
    uom-plugin       >= 0.2,
    orbit

test-suite doctest
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  ghc-options:
    -Wall -threaded
  hs-source-dirs:
    test
  main-is:
    DocTest.hs
  build-depends:
    base,
    directory >= 1.0,
    doctest   >= 0.8,
    filepath  >= 1.3
